fixed svg issue - added alt attributes - added custom scrollbar - added link openers

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,90 +1,99 @@
-@import '../../styles/variables.scss';
+@import "../../styles/variables.scss";
 
 .footer-section {
-    height: 20vh;
-    position: relative;
-    padding: 50px 100px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-content: stretch;
-    justify-content: center;
-    align-items: stretch;
-    z-index: 50;
+  height: 20vh;
+  position: relative;
+  padding: 50px 100px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: stretch;
+  justify-content: center;
+  align-items: stretch;
+  z-index: 50;
 }
 
 .footer-line {
-    position: absolute;
-    left: 0;
-    top: 0;
-    border: 0;
-    border-top: 4px solid #00bf89;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  border: 0;
+  border-top: 4px solid #00bf89;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  width: 100%;
 }
 
 .footer-logo-and-social {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: space-evenly;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: space-evenly;
+  align-items: center;
+  p {
+    padding: 0 12px 0 12px;
+  }
 }
 
 .footer-imprint {
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-    
-    a {
-      text-decoration: none;
-      color: white;
-      position: relative;
-      overflow: visible;
-  
-      &:after {
-        content: "";
-        position: absolute;
-        bottom: 8px;
-        left: 0;
-        width: 0;
-        height: 2px;
-        background-color: #00bf89;
-        transition: width 0.3s ease-in-out;
-        z-index: 51; 
-      }
-  
-      &:hover:after {
-        width: 100%;
-      }
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+
+  a {
+    text-decoration: none;
+    color: white;
+    position: relative;
+    overflow: visible;
+
+    &:after {
+      content: "";
+      position: absolute;
+      bottom: 8px;
+      left: 0;
+      width: 0;
+      height: 2px;
+      background-color: #00bf89;
+      transition: width 0.3s ease-in-out;
+      z-index: 51;
     }
-  }   
+
+    &:hover:after {
+      width: 100%;
+    }
+  }
+}
 
 .footer-social-media-links img {
-    padding-right: 24px;
-    transition: all 0.3s ease;
-    cursor: pointer;
-    &:hover {
-        transform: scale(1.2); 
-      }
-    
-      &:active {
-        transform: scale(0.95);
-      }
+  padding-right: 24px;
+  transition: all 0.3s ease;
+  cursor: pointer;
+  &:hover {
+    transform: scale(1.2);
+  }
+
+  &:active {
+    transform: scale(0.95);
+  }
 }
 
 @media (max-width: 768px) {
-    .footer-section {
-        padding: 50px 50px;
-    }
+  .footer-section {
+    padding: 50px 50px;
+  }
 }
 
 @media (max-width: 560px) {
-    .footer-section {
-        padding: 50px 25px;
-    }
+  .footer-section {
+    padding: 50px 25px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+  }
 }
